kubernetes/prod/portfolio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-app
  template:
    metadata:
      labels:
        app: portfolio-app
    spec:
      containers:
        - name: portfolio
          image: <IMAGE>
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
