kubernetes/prod/porftolio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: portfolio-app
