kubernetes/prod/portfolio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jimmy.codes
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-svc
              servicePort: 80
